google form mobile fix on safari

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -270,8 +270,8 @@
   }
   .googleform {
     width: 100%;
-    max-width:650px;
-    height:650px;
+    max-width:700px;
+    height:700px;
 
   }
   .static_card {
